# liber_content_factory_system

./: .env  .gitignore  CAPSTONE.md  CODE_REVIEW.md  README.md  RUN.md  agents-cli-manifest.yaml  docker-compose.yml  fix_sleeps.py  index.html  main.py  package.json  patch_agents_again.py  patch_formatters.py  patch_guardrails_again.py  patch_media.py  patch_pipeline_mypy.py  patch_publish_mypy.py  patch_publish_routes.py  patch_ranker.py  patch_routes.py  patch_security_test.py  patch_server_threading.py  patch_webhook_mypy.py  pyproject.toml  quotes_db.json  research_complete.md  server.py  tailwind.config.js
agent-backend/: .env.example  README.md  main.py  pyproject.toml  server.py
agent-backend/liber_content_factory/: __init__.py
agent-backend/liber_content_factory/agents/: README.md  __init__.py  _shared.py  duplicate_detector.py  formatters.py  generator.py  media_generator.py  pipeline.py  planner.py  publisher.py  ranker.py  refinement_loop.py  researcher.py  validator.py
agent-backend/liber_content_factory/api/: __init__.py  content_routes.py  publish_routes.py  settings_routes.py  storage.py
agent-backend/liber_content_factory/config/: constants.py  settings.py
agent-backend/liber_content_factory/core/: __init__.py  models.py  schemas.py  strategy.py
agent-backend/liber_content_factory/observability/: __init__.py  hooks.py  telemetry.py
agent-backend/liber_content_factory/repositories/: __init__.py  storage_repo.py
agent-backend/liber_content_factory/security/: __init__.py  gateway.py  guardrails.py
app/: agent.py  models.py  tools.py
(+95 files in other folders)
